[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/pixel_ship_red.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 11.0454

[node name="Player" type="Area2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="SprPlayer" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="ColPlayer" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="PositionShot" type="Position2D" parent="."]
position = Vector2( 15, 0 )
[connection signal="area_entered" from="." to="." method="_on_player_area_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timeout"]
